--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -20,7 +20,7 @@
         display: grid;
         grid-gap: 1rem;
         padding: 15px;
-        background-color: lightblue;
+        background-color: #b9e0c9;
     }
     h1 {
         font-family: 'Poppins', serif;
